fix report page alignment

--- a/less/site.less
+++ b/less/site.less
@@ -41,6 +41,7 @@ html,
     box-sizing: border-box;
     display:flex;
     flex-direction:column;
+    margin: 0em 1em;
 }
 
 @annoyingscrollbars: 5em;
